[WNMGDS-2726] Update alert background colors to ensure sufficient color contrast (#3007)
* Update success and error alert backgrounds to new approved colors to fix contrast

These both had color-contrast issues with primary-colored links and such

* Update VRT snapshots

* These example VRTs changed too

* Don't need these variables that were used to correct contrast issues

This is the root issue the bg color change was trying to solve. There are too many possible combinations to account for with special CSS overrides. We instead chose to make sure the primary color worked on all normal background colors

* Put some links in the success and error alert stories to check the contrast

--- a/packages/docs/static/themes/healthcare-theme.css
+++ b/packages/docs/static/themes/healthcare-theme.css
@@ -9,9 +9,9 @@
 --accordion-content__background-color: #ffffff00;
 --accordion-icon__size: 0.875rem;
 --alert__background-color: #ecf4fa;
---alert__background-color--error: #fce8ec;
+--alert__background-color--error: #fef5f7;
 --alert__background-color--lightweight: #ffffff;
---alert__background-color--success: #e7f3e7;
+--alert__background-color--success: #f6faf5;
 --alert__background-color--warn: #fef9e9;
 --alert__border-left-color: #3e94cf;
 --alert__border-color--error: #e31c3d;
@@ -21,10 +21,6 @@
 --alert__icon-size: 1.5rem;
 --alert__padding: 16px;
 --alert-bar__width: 8px;
---alert-link__font-color: #034866;
---alert-link__font-color--hover: #023449;
---alert-link__font-color--focus: #023449;
---alert-link__font-color--active: #023449;
 --badge__background-color: #5a5a5a;
 --badge__background-color--alert: #e31c3d;
 --badge__background-color--info: #046791;
@@ -381,7 +377,7 @@
 --color-border: #d9d9d9;
 --color-border-dark: #0f1e38;
 --color-border-inverse: #ffffff;
---color-error-lightest: #fce8ec;
+--color-error-lightest: #fef5f7;
 --color-error-lighter: #f7bbc5;
 --color-error-light: #eb6077;
 --color-error: #e31c3d;
@@ -427,7 +423,7 @@
 --color-info-dark: #3885ba;
 --color-info-darker: #2b6891;
 --color-info-darkest: #1f4a68;
---color-success-lightest: #e7f3e7;
+--color-success-lightest: #f6faf5;
 --color-success-lighter: #b8dcb7;
 --color-success-light: #59ac56;
 --color-success: #12890e;
